implement header menu

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,78 @@
             <h1 class="l-header__title">
                 JavaScript Coder
             </h1>
+            <div class="l-header__menu">
+                <a
+                    class="l-header__menu-item"
+                    href="https://github.com/CoC12/javascript_coder"
+                    target="_blank"
+                    rel="noopener"
+                >
+                    <div class="l-header__menu-label">
+                        <img
+                            class="l-header__menu-icon"
+                            src="svg/github-mark-white.svg"
+                            alt="GitHub ロゴ"
+                        >
+                    </div>
+                </a>
+                <div class="l-header__menu-item">
+                    <div class="l-header__menu-label">
+                        <img
+                            class="l-header__menu-icon"
+                            src="svg/settings-white.svg"
+                            alt="設定アイコン"
+                        >
+                    </div>
+                    <div class="l-header__menu-dropdown">
+                        <a
+                            class="l-header__menu-dropdown-item"
+                            href="https://github.com/CoC12/javascript_coder/releases"
+                            target="_blank"
+                            rel="noopener"
+                        >
+                            <img
+                                class="l-header__menu-dropdown-icon"
+                                src="svg/info-black-gray.svg"
+                                alt="バージョンアイコン"
+                            >
+                            <span class="l-header__menu-dropdown-label">
+                                バージョン: v1.0.0-beta1
+                            </span>
+                        </a>
+                        <a
+                            class="l-header__menu-dropdown-item"
+                            href="https://github.com/CoC12/javascript_coder/issues"
+                            target="_blank"
+                            rel="noopener"
+                        >
+                            <img
+                                class="l-header__menu-dropdown-icon"
+                                src="svg/bug-report-gray.svg"
+                                alt="バグレポートアイコン"
+                            >
+                            <span class="l-header__menu-dropdown-label">
+                                不具合を報告する
+                            </span>
+                        </a>
+                        <a
+                            class="l-header__menu-dropdown-item"
+                            href="license/"
+                            target="_blank"
+                            rel="noopener"
+                        >
+                            <img
+                                class="l-header__menu-dropdown-icon"
+                                src="svg/copyright-gray.svg"
+                                alt="バグレポートアイコン"
+                            >
+                            <span class="l-header__menu-dropdown-label">
+                                ライセンス
+                            </span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </header>
         <main>
             <div class="l-main__content">
