deploy: b78d686b46977f35fa2d2ea4745f78e1f6e7192d

--- a/license/index.html
+++ b/license/index.html
@@ -4,8 +4,8 @@
         <title>JavaScript Coder</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/css/base.css" rel="stylesheet" type="text/css">
-        <link href="/css/license.css" rel="stylesheet" type="text/css">
+        <link href="../css/base.css" rel="stylesheet" type="text/css">
+        <link href="../css/license.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <main>
