--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/base.css" rel="stylesheet" type="text/css">
         <link href="css/question-detail.css" rel="stylesheet" type="text/css">
+        <link href="css/components/tooltip.css" rel="stylesheet" type="text/css">
+        <link href="css/components/modal.css" rel="stylesheet" type="text/css">
+        <link href="css/components/test_case_modal.css" rel="stylesheet" type="text/css">
         <link href="css/lib/prismjs/prism.css" rel="stylesheet" type="text/css">
         <script src="js/base.js" type="text/javascript" defer></script>
         <script src="js/question.js" type="text/javascript" defer></script>
         <script src="js/question-list.js" type="text/javascript" defer></script>
+        <script src="js/components/modal.js" type="text/javascript" defer></script>
+        <script src="js/components/test_case_modal.js" type="text/javascript" defer></script>
         <script src="js/lib/prismjs/prism.js" type="text/javascript" defer></script>
         <script src="js/lib/monaco-editor/vs/loader.js" type="text/javascript" defer></script>
     </head>
@@ -54,7 +59,7 @@
                                 alt="バージョンアイコン"
                             >
                             <span class="l-header__menu-dropdown-label">
-                                バージョン: v1.0.0-beta2
+                                バージョン: v1.0.0-beta3
                             </span>
                         </a>
                         <a
@@ -95,6 +100,9 @@
             <div class="l-main__content">
                 <div id="id-question-list-container"></div>
                 <div id="id-question-detail-container"></div>
+            </div>
+            <div id="id-modal" class="c-modal__container">
+                <div class="js-modal__content"></div>
             </div>
         </main>
         <template id="id-template__question-list-item">
@@ -176,6 +184,22 @@
                     </table>
                 </div>
                 <div class="c-question-detail__score-virtual-env js-virtual-env"></div>
+            </div>
+        </template>
+        <template id="id-template__test-case-modal-content">
+            <div class="c-test-case-modal__container">
+                <div class="c-test-case-modal__content">
+                    <h3 class="js-title"></h3>
+                    <hr>
+                    <h4>
+                        テストケースの概要
+                    </h4>
+                    <div class="js-description"></div>
+                    <h4>
+                        テストケースフロー
+                    </h4>
+                    <ol class="js-flow"></ol>
+                </div>
             </div>
         </template>
     </body>
